Bug 169112 - FILEOPEN PPTX Memory leak and forced close when switching to notes view
Summary: FILEOPEN PPTX Memory leak and forced close when switching to notes view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.5
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks:
 
Reported: 2025-10-28 13:28 UTC by Martin Tlustos
Modified: 2025-12-03 14:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Document that triggers the bug (1013.63 KB, application/vnd.oasis.opendocument.presentation)
2025-10-29 09:38 UTC, Martin Tlustos
Details
Test file crashing LO when trying to switch to Notes view (17.02 KB, application/vnd.oasis.opendocument.presentation)
2025-11-11 11:09 UTC, cpohle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tlustos 2025-10-28 13:28:21 UTC
Description:
Every time I try to switch to notes view in impress, the program takes up all available RAM and Swap until it is force-closed by the system.
Displaying the first page in notes view is fine, but switching to another slide or trying to switch to notes view from any other slide than the first one will cause this.

I tried in both flatpak and ubuntu repository version, several times. I also tried starting Impress with safe mode enabled.

Steps to Reproduce:
1. open any presentation in impress
2. go to any slide other than the first
3. select "notes" from view menu

Actual Results:
Impress quickly fills ram and swap.

Expected Results:
It should switch to notes view without problem.


Reproducible: Always


User Profile Reset: No

Additional Info:

Tried in both flatpak and ubuntu deb version:

Version: 25.8.2.2 (X86_64) / LibreOffice Community
Build ID: 580(Build:2)
CPU threads: 6; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+wayland)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Ubuntu package version: 4:25.8.2~rc2-0ubuntu0.24.04.1~lo1
Calc: threaded

Version: 25.8.2.2 (X86_64) / LibreOffice Community
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 6; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Flatpak
Calc: threaded

System Information:
Operating System: KDE neon User Edition
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.14.0-33-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 16 GiB of RAM (15.0 GiB usable)
Graphics Processor 1: AMD Radeon Graphics
Graphics Processor 2: AMD Radeon 550X Series
Manufacturer: Acer
Product Name: Aspire A515-44G
System Version: V1.12
Comment 1 m_a_riosv 2025-10-28 15:33:47 UTC
Not reproducible with
Version: 25.8.3.1 (X86_64)
Build ID: 52ad9dd1c984050a9fb6932dbfb16e86a49e9758
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded

Please test in safe mode, Menu/Help/Restart in Safe Mode
Comment 2 Martin Tlustos 2025-10-29 07:33:57 UTC
I already did that. I also tried to disable extensions, and reset the user profile. No luck so far.

I also tried to use gdb to generate a backtrace, but somehow didn't succeed. I'm not an expert though...
Comment 3 Martin Tlustos 2025-10-29 09:32:58 UTC
Just found out that it's only presentations based on certain pptx templates that I imported. Even within those, if I create a slide that has no background, it works without problems on this specific slide.
Comment 4 Martin Tlustos 2025-10-29 09:38:18 UTC
Created attachment 203592 [details]
Document that triggers the bug
Comment 5 Sarah Lim 2025-11-06 13:20:13 UTC
This is reproducible

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-GB
Calc: threaded

It happens on pptx files I imported, even when the presentation contains only 3 slides. The third slide uses 2 box layout. When the slides are created directly on impress, the Notes view works correctly.
Comment 6 Buovjaga 2025-11-09 18:52:27 UTC
Bibisected with win64-25.2 to 79ab5c3775f8d0685585810583b84c0f4d49a1bf
CairoSDPR: Let VclPixelProcessor2D use RedLining decompose

Raising priority to highest as we don't know how common the scenario seen in the PPTX is in the wild.
Comment 7 cpohle 2025-11-11 11:09:53 UTC
Created attachment 203868 [details]
Test file crashing LO when trying to switch to Notes view

This file crashes LO as well when trying to switch to Notes view. It was identified as the one slide causing the crash from a larger document formerly converted from PPTX. Maybe this helps to narrow down the problem.
Comment 8 m_a_riosv 2025-11-11 12:00:33 UTC
Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 9 Commit Notification 2025-11-14 12:58:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a07f2ddafcd157fb6161306e375e17c77782df53

tdf#169112 lockup when switching to notes view

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-12-03 14:17:42 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/aa391cc2811e1efefcec02ccaaa9897252be69f2

tdf#169112 lockup when switching to notes view

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.