tdf#169112 lockup when switching to notes view

For reasons I dont understand we end up trying to create
polygons with millions of points to render the wavy underline here.

Just apply a fairly arbitrary exit to prevent that.

regression from
  commit 79ab5c3775f8d0685585810583b84c0f4d49a1bf
  Author: Armin Le Grand (Collabora) <Armin.Le.Grand@me.com>
  Date:   Fri Aug 23 20:59:55 2024 +0200
  CairoSDPR: Let VclPixelProcessor2D use RedLining decompose

Change-Id: I703eeeb0bd4a9987d9d355493ffd7fa8664c2d9e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194011
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit a07f2ddafcd157fb6161306e375e17c77782df53)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194096
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>